# QuantGPT

./: README.md
quantgpt/: Makefile  (+4 more)
quantgpt/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
quantgpt/backend/.deps/: __editable__.quantgpt_backend-0.1.0.pth  __editable___quantgpt_backend_0_1_0_finder.py
quantgpt/backend/.deps/alembic-1.18.5.dist-info/: RECORD
quantgpt/backend/.deps/anyio-4.14.2.dist-info/: RECORD
quantgpt/backend/.deps/bcrypt-4.2.1.dist-info/: RECORD
quantgpt/backend/.deps/cffi-2.1.0.dist-info/: RECORD  WHEEL
quantgpt/backend/.deps/cryptography-49.0.0.dist-info/: RECORD
quantgpt/backend/.deps/email_validator-2.3.0.dist-info/: RECORD
quantgpt/backend/.deps/fastapi-0.139.2.dist-info/: RECORD
quantgpt/backend/.deps/greenlet-3.5.3.dist-info/: RECORD
quantgpt/backend/.deps/hpack-4.2.0.dist-info/: RECORD
quantgpt/backend/.deps/httptools-0.8.0.dist-info/: RECORD
quantgpt/backend/.deps/httpx-0.28.1.dist-info/: RECORD
quantgpt/backend/.deps/idna-3.18.dist-info/: RECORD
quantgpt/backend/.deps/mako-1.3.12.dist-info/: RECORD
quantgpt/backend/.deps/passlib-1.7.4.dist-info/: RECORD
quantgpt/backend/.deps/postgrest-2.31.0.dist-info/: RECORD
quantgpt/backend/.deps/propcache-0.5.2.dist-info/: RECORD
quantgpt/backend/.deps/psycopg-3.3.4.dist-info/: RECORD
quantgpt/backend/.deps/psycopg_binary-3.3.4.dist-info/: RECORD
quantgpt/backend/.deps/pyasn1-0.6.4.dist-info/: RECORD
quantgpt/backend/.deps/pydantic_settings-2.14.2.dist-info/: RECORD
quantgpt/backend/.deps/pygments-2.20.0.dist-info/: RECORD
quantgpt/backend/.deps/pytest-9.1.1.dist-info/: RECORD
quantgpt/backend/.deps/python_dotenv-1.2.2.dist-info/: RECORD
quantgpt/backend/.deps/python_jose-3.5.0.dist-info/: RECORD
quantgpt/backend/.deps/quantgpt_backend-0.1.0.dist-info/: RECORD  direct_url.json
quantgpt/backend/.deps/realtime-2.31.0.dist-info/: RECORD
quantgpt/backend/.deps/redis-8.0.1.dist-info/: RECORD
quantgpt/backend/.deps/rsa-4.9.1.dist-info/: RECORD
quantgpt/backend/.deps/sqlalchemy-2.0.51.dist-info/: RECORD
quantgpt/backend/.deps/storage3-2.31.0.dist-info/: RECORD
quantgpt/backend/.deps/structlog-26.1.0.dist-info/: RECORD
quantgpt/backend/.deps/supabase-2.31.0.dist-info/: RECORD
quantgpt/backend/.deps/supabase_auth-2.31.0.dist-info/: RECORD
quantgpt/backend/alembic/: env.py
quantgpt/backend/app/: main.py
quantgpt/backend/quantgpt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quantgpt/backend/tests/: agent_conftest.py  conftest.py  test_agent_base.py  test_agent_manager.py  test_agent_memory.py  test_agent_message_bus.py  test_agent_stores.py  test_agent_task_queue.py  test_broker_status_adapter.py  test_cache.py  test_configuration_adapter.py  test_facade.py  test_health.py  test_http_transport.py  test_indicators.py  test_intelligence_agents.py  test_market_data_adapter.py  test_models.py  test_orders_adapter.py  test_paper_trading_adapter.py  test_patterns.py  test_placeholder_agents.py  test_portfolio_adapter.py  test_positions_adapter.py  test_production_baseline.py  test_scoring.py  test_strategies.py  test_strategy_api.py  test_trades_adapter.py  test_websocket_adapter.py
(+128 files in other folders)
